<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.reporta.user.signup.basic.BasicSignupActivity">

    <!-- Sign Up -->
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="28dp"
        android:letterSpacing="0.15"
        android:text="@string/sign_up"
        android:textColor="#081452"
        android:textSize="22sp"
        app:fontFamily="@font/avenir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email Address -->
    <TextView
        android:id="@+id/email_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/avenir"
        android:gravity="top"
        android:letterSpacing="0.01"
        android:text="@string/email_address"
        android:textColor="#081452"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:inputType="textEmailAddress"
        android:textColor="#3E4347"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address_label" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/avenir"
        android:gravity="top"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="5sp"
        android:text="@string/password"
        android:textColor="#081452"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_address" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="32dp"
        android:textColor="#3E4347"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_label" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/rounded_corner_rectangle"
        android:fontFamily="@font/avenir"
        android:letterSpacing="0.01"
        android:text="@string/continue_lbl"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <!-- Or register with -->
    <TextView
        android:id="@+id/or_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/avenir"
        android:gravity="top"
        android:letterSpacing="0.01"
        android:text="@string/or_register"
        android:textColor="#081452"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />

    <ImageView
        android:id="@+id/logo_google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/ellipse"
        android:elevation="10dp"
        android:src="@drawable/ic_google"
        app:layout_constraintEnd_toStartOf="@id/logo_facebook"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_register" />

    <ImageView
        android:id="@+id/logo_facebook"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ellipse"
        android:elevation="10dp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/logo_google"
        app:layout_constraintTop_toBottomOf="@id/or_register" />

    <!-- Already have an account? -->
    <TextView
        android:id="@+id/owns_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenir"
        android:gravity="top"
        android:letterSpacing="0.01"
        android:text="@string/owns_account"
        android:textColor="#081452"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/login"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_facebook" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:fontFamily="@font/avenir"
        android:letterSpacing="0.01"
        android:text="@string/login"
        android:textColor="#ED9E28"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/owns_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/owns_account" />

    <ImageView
        android:id="@+id/phone"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/ellipse"
        android:elevation="15dp"
        android:padding="16dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>